syntax = "proto3";
package shop;

import "google/protobuf/timestamp.proto";

service ShopService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse) {}
  rpc ListOrder(ListOrderRequest) returns (ListOrderResponse) {}
  rpc UploadImage(stream UploadImageRequest) returns (UploadImageResponse) {}
}

message Order {
  enum PaymentMethod {
    UNKNOWN = 0;
    CACHE = 1;
    CREDIT_CARD = 2;
    QR_CODE = 3;
  }

  string product_id = 1;

  int32 price = 2;

  PaymentMethod payment_method = 3;

  string by = 4;

  google.protobuf.Timestamp at = 15;
}

message CreateOrderRequest {
  string product_id = 1;

  Order.PaymentMethod payment_method = 2;
}

message CreateOrderResponse {
  Order order = 1;
}

message ListOrderRequest {
  string user_name = 1;
}

message ListOrderResponse {
  repeated Order orders = 1;
}

message UploadImageRequest {

  oneof file {
    string filename = 1;
    bytes data = 2;
  }
}

message UploadImageResponse {
  string id = 1;
  string filename = 2;
  google.protobuf.Timestamp completeDate = 3;
}
